# qc-parallelizer

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.pypi.md  pyproject.toml
.github/workflows/: publish.yml
notebooks/: README.md  circuit-layouts.ipynb  circuit-packers.ipynb  helpers.py  parallel-circuits-introduction.ipynb  parallel-circuits.ipynb  pennylane.ipynb  ring-packing.ipynb
src/qc_parallelizer/: __init__.py  base.py  binmanager.py  circuitbin.py  packers.py  packing.py  parallelizer.py  postprocessing.py  translation.py  transpiling.py  visualization.py
src/qc_parallelizer/backends/: __init__.py  circuitbin.py  manager.py
src/qc_parallelizer/bins/: circuitbin.py  manager.py
src/qc_parallelizer/circuitbins/: bins.py  manager.py
src/qc_parallelizer/extensions/: __init__.py  backend.py  circuit.py  typing.py
src/qc_parallelizer/generic/: backendtools.py  circuittools.py  generic.py  layouts.py  logging.py
src/qc_parallelizer/interfaces/: __init__.py  backend.py  circuit.py  conversions.py  pennylane.py
src/qc_parallelizer/jobs/: __init__.py  job.py
src/qc_parallelizer/packers/: __init__.py  base.py  smt.py  vf2.py
src/qc_parallelizer/results/: paralleljob.py  postprocessing.py  visualization.py
src/qc_parallelizer/util/: __init__.py  layouts.py  logging.py  translation.py  typing.py  visualization.py
tests/: benchmark_parallelizer.py  test_common.py  test_extensions.py  test_parallelizer.py  test_util.py  utils.py
